--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-DATABASE_URL="mysql://projetopo:DjJXk*^8iNDRnpX5uv@144.22.238.131:3306/projetopo"
+# DATABASE_URL="mysql://projetopo:DjJXk*^8iNDRnpX5uv@144.22.238.131:3306/projetopo"
+DATABASE_URL="mysql://projetopo:DjJXk*^8iNDRnpX5uv@10.0.0.68:3306/projetopo"
 SHADOW_DATABASE_URL="mysql://root:DjJXk*^8iNDRnpX5uv@localhost:3306/projetopo"
 # DATABASE_URL="mysql://root:DjJXk*^8iNDRnpX5uv@localhost:3306/projetopo"
