--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
   "devDependencies": {
     "@playwright/test": "^1.48.0",
     "@types/node": "^22.7.5",
+    "@types/pino": "^7.0.5",
+    "pino-pretty": "^11.3.0",
     "prisma": "^5.20.0",
     "tsx": "^4.19.1",
     "typescript": "^5.6.3",
     "vitest": "^2.1.2"
   },
   "dependencies": {
-    "@prisma/client": "^5.20.0"
+    "@prisma/client": "^5.20.0",
+    "pino": "^9.5.0"
   }
 }
