--- a/package.json
+++ b/package.json
@@ -6,21 +6,24 @@
   "scripts": {
     "start": "node dist/src/index.js",
     "dev": "tsx src/index.ts",
-    "test": "vitest",
+    "test": "jest --watch",
     "build": "tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
     "@playwright/test": "^1.48.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.7.5",
     "@types/pino": "^7.0.5",
+    "jest": "^29.7.0",
     "pino-pretty": "^11.3.0",
     "prisma": "^5.20.0",
+    "ts-jest": "^29.2.5",
     "tsx": "^4.19.1",
-    "typescript": "^5.6.3",
-    "vitest": "^2.1.2"
+    "typescript": "^5.6.3"
   },
   "dependencies": {
     "@prisma/client": "^5.20.0",
