Implementação de testes automatizados e log para avaliações

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@
 # DATABASE_URL="mysql://projetopo:DjJXk*^8iNDRnpX5uv@10.0.0.68:3306/projetopo"
 # SHADOW_DATABASE_URL="mysql://root:DjJXk*^8iNDRnpX5uv@localhost:3306/projetopo"
 DATABASE_URL="mysql://root:DjJXk*^8iNDRnpX5uv@localhost:3306/projetopo"
+TOTAL_ABAS=5
