--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "playwright",
+  "name": "bot-modern",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -14,7 +14,6 @@
   "license": "ISC",
   "devDependencies": {
     "@jest/globals": "^29.7.0",
-    "@playwright/test": "^1.48.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.7.5",
     "@types/pino": "^7.0.5",
