Implementação de cluster para rodar o bot

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@
 # SHADOW_DATABASE_URL="mysql://root:DjJXk*^8iNDRnpX5uv@localhost:3306/projetopo"
 DATABASE_URL="mysql://root:DjJXk*^8iNDRnpX5uv@localhost:3306/projetopo"
 TOTAL_ABAS=5
+# TOTAL_ABAS=1
